Switches //fhir/java to be backed by R4 throughout, and supports both R4 and STU3 in all utilities and generators. Adds "EarlyStructureDefinition" mode to JsonFormat parser, that is capable of parsing DSTU2 and STU3 StructureDefinitions into R4.  Note that this is *explicitly NOT* an all-purpose converter, and should not be used for anything other than non-normative structure definitions. Adds generator script for R4 protos. A follow-up CL will reorganize code that is currently in the stu3 directory into a more accurate location.
PiperOrigin-RevId: 250926160

--- a/java/BUILD
+++ b/java/BUILD
@@ -30,6 +30,7 @@ java_library(
         "//proto:annotations_java_proto",
         "//proto/r4:codes_java_proto",
         "//proto/r4:datatypes_java_proto",
+        "//proto/r4:extensions_java_proto",
         "//proto/r4:resources_java_proto",
         "@com_google_apis_google_api_services_bigquery//jar",
         "@com_google_http_client_google_http_client//jar",
@@ -47,7 +48,6 @@ java_library(
         ],
     ),
     deps = [
-        ":common",
         ":structure_definition_transformer",
         ":stu3",
         "//external:guava",
@@ -55,6 +55,7 @@ java_library(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_beust_jcommander//jar",
         "@com_google_apis_google_api_services_bigquery//jar",
         "@com_google_http_client_google_http_client//jar",
@@ -153,6 +154,8 @@ java_library(
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_codes_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:codes_java_proto",
+        "//proto/r4:datatypes_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
@@ -350,7 +353,6 @@ java_test(
         "//external:guava",
         "//proto/stu3:resources_java_proto",
         "//testdata/stu3/profiles:test_java_proto",
-        "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -401,6 +403,8 @@ java_test(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:datatypes_java_proto",
+        "//proto/r4:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
@@ -413,8 +417,10 @@ java_test(
     size = "medium",
     srcs = ["src/test/java/com/google/fhir/stu3/ProtoGeneratorTest.java"],
     data = [
+        "//spec:fhir_r4_structure_definitions_filegroup",
         "//spec:fhir_stu3_structure_definitions_filegroup",
         "//spec:uscore_stu3_structure_definitions_filegroup",
+        "//testdata/r4:descriptors",
         "//testdata/stu3:descriptors",
         "//testdata/stu3:google",
     ],
@@ -428,6 +434,7 @@ java_test(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
@@ -476,14 +483,13 @@ java_library(
         ":stu3",
         "//external:gson",
         "//external:guava",
-        "//proto/stu3:codes_java_proto",
-        "//proto/stu3:datatypes_java_proto",
-        "//proto/stu3:extensions_java_proto",
-        "//proto/stu3:metadatatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:profiles_java_proto",
-        "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:codes_java_proto",
+        "//proto/r4:datatypes_java_proto",
+        "//proto/r4:extensions_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
@@ -504,6 +510,7 @@ java_test(
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
         "@com_google_truth_truth//jar",
         "@junit_junit//jar",
@@ -519,7 +526,8 @@ java_binary(
         ":stu3",
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
-        "//proto/stu3:resources_java_proto",
+        "//proto/r4:extensions_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_beust_jcommander//jar",
         "@com_google_protobuf//:protobuf_java",
     ],
@@ -532,10 +540,12 @@ java_library(
         ":common",
         ":stu3",
         "//external:guava",
-        "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
-        "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto/r4:codes_java_proto",
+        "//proto/r4:datatypes_java_proto",
+        "//proto/r4:extensions_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
@@ -549,7 +559,7 @@ java_binary(
         ":valueset_generator_lib",
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
-        "//proto/stu3:resources_java_proto",
+        "//proto/r4:resources_java_proto",
         "@com_beust_jcommander//jar",
         "@com_google_protobuf//:protobuf_java",
     ],
