--- a/testdata/r4/BUILD
+++ b/testdata/r4/BUILD
@@ -4,6 +4,14 @@ package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
+# These files contain testdata for generating protos.
+filegroup(
+    name = "descriptors",
+    srcs = glob([
+        "descriptors/*",
+    ]),
+)
+
 # These files are prototxt representations of sample resources provided by FHIR.
 filegroup(
     name = "examples",
