Moves C++ utils out of /stu3/ directory, and drops stu3:: namespace.  These utilities ultimately should work for all supported versions of FHIR.
PiperOrigin-RevId: 251682863

--- a/cc/google/fhir/examples/BUILD
+++ b/cc/google/fhir/examples/BUILD
@@ -8,8 +8,8 @@ cc_binary(
     name = "LocalProfiler",
     srcs = ["local_profiler.cc"],
     deps = [
-        "//cc/google/fhir/stu3:json_format",
-        "//cc/google/fhir/stu3:profiles",
+        "//cc/google/fhir:json_format",
+        "//cc/google/fhir:profiles",
         "//examples/profiles:demo_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:resources_cc_proto",
