--- a/cc/google/fhir/seqex/BUILD
+++ b/cc/google/fhir/seqex/BUILD
@@ -11,10 +11,10 @@ cc_library(
         ":example_key",
         ":feature_keys",
         ":resource_to_example",
+        "//cc/google/fhir:bundle_to_versioned_resources_converter",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//cc/google/fhir/stu3:bundle_to_versioned_resources_converter",
-        "//cc/google/fhir/stu3:util",
         "//cc/google/fhir/systems",
         "//proto:annotations_cc_proto",
         "//proto/stu3:codes_cc_proto",
@@ -58,9 +58,9 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":bundle_to_seqex_converter",
+        "//cc/google/fhir:extensions",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/status:statusor",
-        "//cc/google/fhir/stu3:extensions",
-        "//cc/google/fhir/stu3:util",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:resources_cc_proto",
@@ -127,9 +127,9 @@ cc_library(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "//cc/google/fhir/status",
-        "//cc/google/fhir/stu3:codeable_concepts",
-        "//cc/google/fhir/stu3:proto_util",
-        "//cc/google/fhir/stu3:util",
+        "//cc/google/fhir:codeable_concepts",
+        "//cc/google/fhir:proto_util",
+        "//cc/google/fhir:util",
         "//cc/google/fhir/systems",
         "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
@@ -147,7 +147,7 @@ cc_test(
         "@com_github_gflags_gflags//:gflags",
         "@protobuf_archive//:protobuf",
         "@com_google_googletest//:gtest_main",
-        "//cc/google/fhir/stu3:test_helper",
+        "//cc/google/fhir:test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:resources_cc_proto",
         "@org_tensorflow//tensorflow/core:lib",
