Add FHIRPath support for numeric and string literals and comparisons.
PiperOrigin-RevId: 254272460

--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -43,6 +43,7 @@ cc_library(
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
+        "//proto/r4:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
