Improve support for handling both stu3 and r4 CodeableConcept types
PiperOrigin-RevId: 254769693

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -127,6 +127,7 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/systems",
         "//proto:annotations_cc_proto",
+        "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
@@ -380,6 +381,7 @@ cc_library(
         ":proto_util",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
+        "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/types:optional",
@@ -398,6 +400,8 @@ cc_test(
         ":codeable_concepts",
         ":test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/r4:datatypes_cc_proto",
+        "//proto/stu3:datatypes_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_googletest//:gtest_main",
         "@org_tensorflow//tensorflow/core:test",
