Generates R4 version of google profile
PiperOrigin-RevId: 255259341

--- a/spec/google/BUILD
+++ b/spec/google/BUILD
@@ -7,10 +7,19 @@ licenses(["notice"])
 package(default_visibility = ["//visibility:public"])
 
 gen_fhir_definitions_and_protos(
-    name = "google",
+    name = "stu3",
     extensions = [
         "google_extensions.prototxt",
     ],
-    package_info = "google_package_info.prototxt",
+    package_info = "google_package_stu3_info.prototxt",
+    separate_extensions = True,
+)
+
+gen_fhir_definitions_and_protos(
+    name = "r4",
+    extensions = [
+        "google_extensions.prototxt",
+    ],
+    package_info = "google_package_r4_info.prototxt",
     separate_extensions = True,
 )
