Generates R4 version of Us Core profiles and codes.
PiperOrigin-RevId: 255487574

--- a/java/BUILD
+++ b/java/BUILD
@@ -158,6 +158,8 @@ java_library(
         "//proto:annotations_java_proto",
         "//proto/r4:codes_java_proto",
         "//proto/r4:datatypes_java_proto",
+        "//proto/r4:resources_java_proto",
+        "//proto/r4:uscore_codes_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
