--- a/py/google/fhir/labels/BUILD
+++ b/py/google/fhir/labels/BUILD
@@ -3,8 +3,10 @@ licenses(["notice"])
 package(default_visibility = ["//visibility:public"])
 
 load(
- "@io_bazel_rules_python//python:python.bzl",
- "py_binary", "py_library", "py_test",
+    "@io_bazel_rules_python//python:python.bzl",
+    "py_binary",
+    "py_library",
+    "py_test",
 )
 
 load("@fhir_bazel_pip_dependencies//:requirements.bzl", "requirement")
