Support r4 in codes and extensions
PiperOrigin-RevId: 257012098

--- a/proto/r4/BUILD
+++ b/proto/r4/BUILD
@@ -39,6 +39,7 @@ fhir_proto_library(
 fhir_proto_library(
     srcs = [
         "extensions.proto",
+        "google_extensions.proto",
     ],
     proto_deps = [
         ":codes_proto",
