Updates profiles.h to have API calls for both STU3 and R4
PiperOrigin-RevId: 257619442

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -92,6 +92,8 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
+        "//proto/r4:datatypes_cc_proto",
+        "//proto/r4:resources_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
@@ -99,8 +101,10 @@ cc_library(
 )
 
 cc_test(
-    name = "profiles_test",
-    srcs = ["profiles_test.cc"],
+    name = "profiles_stu3_test",
+    srcs = [
+        "profiles_stu3_test.cc",
+    ],
     data = [
         "//testdata/stu3:examples",
         "//testdata/stu3/profiles:testdata",
@@ -116,6 +120,30 @@ cc_test(
         "//proto/stu3:profiles_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "profiles_r4_test",
+    srcs = [
+        "profiles_r4_test.cc",
+    ],
+    data = [
+        "//testdata/r4:examples",
+        "//testdata/r4/profiles:testdata",
+    ],
+    deps = [
+        ":profiles",
+        ":test_helper",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/r4:datatypes_cc_proto",
+        "//proto/r4:extensions_cc_proto",
+        "//proto/r4:resources_cc_proto",
+        "//testdata/r4/profiles:test_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
     ],
