--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -79,9 +79,37 @@ cc_test(
 
 cc_library(
     name = "profiles",
-    srcs = ["profiles.cc"],
+    srcs = [
+        "profiles.cc",
+    ],
     hdrs = ["profiles.h"],
     strip_include_prefix = "//cc/",
+    deps = [
+        ":annotations",
+        ":codes",
+        ":extensions",
+        ":profiles_lib",
+        ":proto_util",
+        ":resource_validation",
+        ":util",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//proto:annotations_cc_proto",
+        "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:resources_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@org_tensorflow//tensorflow/core:lib",
+    ],
+)
+
+cc_library(
+    name = "profiles_lib",
+    hdrs = ["profiles_lib.h"],
+    strip_include_prefix = "//cc/",
+    visibility = [
+        "//cc/google/fhir:__pkg__",
+        "//cc/google/fhir/r4:__pkg__",
+    ],
     deps = [
         ":annotations",
         ":codes",
@@ -92,9 +120,8 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
-        "//proto/r4:datatypes_cc_proto",
-        "//proto/r4:resources_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
     ],
@@ -120,30 +147,6 @@ cc_test(
         "//proto/stu3:profiles_cc_proto",
         "//proto/stu3:resources_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
-        "@com_google_absl//absl/strings",
-        "@com_google_googletest//:gtest_main",
-    ],
-)
-
-cc_test(
-    name = "profiles_r4_test",
-    srcs = [
-        "profiles_r4_test.cc",
-    ],
-    data = [
-        "//testdata/r4:examples",
-        "//testdata/r4/profiles:testdata",
-    ],
-    deps = [
-        ":profiles",
-        ":test_helper",
-        "//cc/google/fhir/status",
-        "//cc/google/fhir/status:statusor",
-        "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:datatypes_cc_proto",
-        "//proto/r4:extensions_cc_proto",
-        "//proto/r4:resources_cc_proto",
-        "//testdata/r4/profiles:test_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
     ],
