Converts C++ parser/printer to be backed by R4 primitives.
PiperOrigin-RevId: 260180714

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -167,6 +167,7 @@ cc_library(
         "//proto:annotations_cc_proto",
         "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@org_tensorflow//tensorflow/core:lib",
@@ -317,13 +318,13 @@ cc_library(
         ":extensions",
         ":primitive_wrapper",
         ":profiles",
+        ":proto_util",
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
+        "//proto/r4:extensions_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
@@ -353,6 +354,8 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
+        "//proto/r4:datatypes_cc_proto",
+        "//proto/r4:extensions_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "@com_google_absl//absl/memory",
