Separates proto extensions that are used purely in protogeneration from proto extensions that actually are used by FHIR protos
PiperOrigin-RevId: 261711948

--- a/java/BUILD
+++ b/java/BUILD
@@ -28,6 +28,7 @@ java_library(
         "//proto/stu3:resources_java_proto",
         "//proto/stu3:uscore_codes_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:protogenerator_annotations_java_proto",
         "//proto/r4:codes_java_proto",
         "//proto/r4:datatypes_java_proto",
         "//proto/r4:extensions_java_proto",
@@ -56,6 +57,7 @@ java_library(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:protogenerator_annotations_java_proto",
         "//proto/r4:resources_java_proto",
         "@com_beust_jcommander//jar",
         "@com_google_apis_google_api_services_bigquery//jar",
@@ -407,6 +409,7 @@ java_test(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:protogenerator_annotations_java_proto",
         "//proto/r4:datatypes_java_proto",
         "//proto/r4:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
@@ -438,6 +441,7 @@ java_test(
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:resources_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:protogenerator_annotations_java_proto",
         "//proto/r4:resources_java_proto",
         "@bazel_tools//tools/java/runfiles",
         "@com_google_protobuf//:protobuf_java",
@@ -546,6 +550,7 @@ java_library(
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
         "//proto:annotations_java_proto",
+        "//proto:protogenerator_annotations_java_proto",
         "//proto/r4:codes_java_proto",
         "//proto/r4:datatypes_java_proto",
         "//proto/r4:extensions_java_proto",
