--- a/proto/BUILD
+++ b/proto/BUILD
@@ -13,3 +13,11 @@ fhir_proto_library(
     ],
     proto_library_prefix = "annotations",
 )
+
+fhir_proto_library(
+    srcs = ["protogenerator_annotations.proto"],
+    proto_deps = [
+        "@protobuf_archive//:descriptor_proto",
+    ],
+    proto_library_prefix = "protogenerator_annotations",
+)
