--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -167,6 +167,7 @@ cc_library(
         "//proto:annotations_cc_proto",
         "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@org_tensorflow//tensorflow/core:lib",
@@ -319,13 +320,13 @@ cc_library(
         ":extensions",
         ":primitive_wrapper",
         ":profiles",
+        ":proto_util",
         ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
-        "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
