Adds R4 fork of codeable_concepts.h. This is a fork instead of a templatization because of the difference between legacy stu3 coding inlining vs r4 typed coding inlining.  They can be unified once stu3 is updated to use new coding inlining.
For the time being, functions that don't have the version set by the signature (e.g., CopyCodeableConcept which takes two Messages, can use the version agnostic fhir/cc/codeable_concepts.h , which reads the version from the message annotation and delegates to the correct codeable_concepts.  This allows for version independent code.

PiperOrigin-RevId: 264316729

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -21,7 +21,6 @@ cc_library(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
-        "//proto/r4:resources_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
     ],
@@ -49,5 +48,41 @@ cc_test(
         "//testdata/r4/profiles:test_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
+    name = "codeable_concepts",
+    srcs = ["codeable_concepts.cc"],
+    hdrs = ["codeable_concepts.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "//cc/google/fhir:annotations",
+        "//cc/google/fhir:codes",
+        "//cc/google/fhir:proto_util",
+        "//cc/google/fhir/status:statusor",
+        "//proto:annotations_cc_proto",
+        "//proto/r4:datatypes_cc_proto",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/types:optional",
+        "@org_tensorflow//tensorflow/core:lib",
+        "@protobuf_archive//:protobuf",
+    ],
+)
+
+cc_test(
+    name = "codeable_concepts_test",
+    srcs = ["codeable_concepts_test.cc"],
+    data = [
+        "//testdata/r4/profiles:testdata",
+    ],
+    deps = [
+        ":codeable_concepts",
+        "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/r4:datatypes_cc_proto",
+        "//testdata/r4/profiles:test_cc_proto",
+        "@com_google_googletest//:gtest_main",
+        "@org_tensorflow//tensorflow/core:test",
     ],
 )
