--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -92,20 +92,12 @@ cc_library(
     hdrs = ["profiles.h"],
     strip_include_prefix = "//cc/",
     deps = [
-        ":annotations",
-        ":codes",
-        ":extensions",
         ":profiles_lib",
-        ":proto_util",
-        ":resource_validation",
-        ":util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
-        "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
+        "@protobuf_archive//:protobuf",
     ],
 )
 
@@ -128,7 +120,6 @@ cc_library(
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
-        "//proto/stu3:resources_cc_proto",
         "@com_google_absl//absl/strings",
         "@org_tensorflow//tensorflow/core:lib",
     ],
@@ -166,7 +157,6 @@ cc_library(
     strip_include_prefix = "//cc/",
     deps = [
         ":annotations",
-        ":codeable_concepts",
         ":proto_util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
@@ -271,7 +261,9 @@ cc_library(
         ":annotations",
         ":profiles",
         ":resource_validation",
+        "//cc/google/fhir/r4:profiles",
         "//cc/google/fhir/status",
+        "//proto:annotations_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest",
         "@org_tensorflow//tensorflow/core:lib",
@@ -426,11 +418,14 @@ cc_library(
     deps = [
         ":annotations",
         ":proto_util",
+        "//cc/google/fhir/r4:codeable_concepts",
         "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/stu3:codeable_concepts",
         "//proto:annotations_cc_proto",
         "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
         "@com_google_absl//absl/types:optional",
         "@org_tensorflow//tensorflow/core:lib",
         "@protobuf_archive//:protobuf",
@@ -441,6 +436,7 @@ cc_test(
     name = "codeable_concepts_test",
     srcs = ["codeable_concepts_test.cc"],
     data = [
+        "//testdata/r4/profiles:testdata",
         "//testdata/stu3/profiles:testdata",
     ],
     deps = [
@@ -449,6 +445,7 @@ cc_test(
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/r4:datatypes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "//testdata/r4/profiles:test_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_googletest//:gtest_main",
         "@org_tensorflow//tensorflow/core:test",
