--- a/testdata/r4/BUILD
+++ b/testdata/r4/BUILD
@@ -20,6 +20,14 @@ filegroup(
     ]),
 )
 
+# These files are used to help test bigquery integration.
+filegroup(
+    name = "bigquery",
+    srcs = glob([
+        "bigquery/*.json",
+    ]),
+)
+
 # These files contain google extensions.
 filegroup(
     name = "google",
