--- a/testdata/r4/profiles/BUILD
+++ b/testdata/r4/profiles/BUILD
@@ -37,6 +37,21 @@ fhir_proto_library(
     proto_library_prefix = "test",
 )
 
+fhir_proto_library(
+    srcs = [
+        "test_core.proto",
+        "test_extensions_core.proto",
+    ],
+    proto_deps = [
+        "@protobuf_archive//:any_proto",
+        "//proto:annotations_proto",
+        "//proto/r4/core:codes_proto",
+        "//proto/r4/core:datatypes_proto",
+        "//proto/r4/core:extensions_proto",
+    ],
+    proto_library_prefix = "testcore",
+)
+
 filegroup(
     name = "testdata",
     srcs = glob([
