Moves java library and utils over to using the new version of R4 core protos.
PiperOrigin-RevId: 267007794

--- a/proto/stu3/BUILD
+++ b/proto/stu3/BUILD
@@ -122,8 +122,8 @@ fhir_proto_library(
     ],
     proto_deps = [
         "//proto:annotations_proto",
-        "//proto/r4:codes_proto",
-        "//proto/r4:datatypes_proto",
+        "//proto/r4/core:codes_proto",
+        "//proto/r4/core:datatypes_proto",
     ],
     proto_library_prefix = "profile_config",
 )
