cleans up some unused build rules
PiperOrigin-RevId: 268205952

--- a/cc/google/fhir/r4/BUILD
+++ b/cc/google/fhir/r4/BUILD
@@ -41,8 +41,7 @@ cc_test(
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:extensions_cc_proto",
-        "//proto/r4:resources_cc_proto",
+        "//proto/r4:google_extensions_core_cc_proto",
         "//proto/r4:uscore_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
