--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -43,6 +43,7 @@ cc_library(
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
+        "//net/proto2/proto:descriptor_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
         "@com_google_absl//absl/strings",
@@ -63,6 +64,7 @@ cc_test(
     deps = [
         ":fhir_path",
         "//cc/google/fhir/status",
+        "//net/proto2/proto:descriptor_cc_proto",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
