--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -11,6 +11,7 @@ cc_library(
         "//cc/google/fhir:annotations",
         "//cc/google/fhir:proto_util",
         "//cc/google/fhir/status:statusor",
+        "//net/proto2/proto:descriptor_cc_proto",
         "//proto:annotations_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "@com_google_absl//absl/memory",
